Fix slight chevron cropping/overlap problem

--- a/app/assets/stylesheets/views/_homepage.scss
+++ b/app/assets/stylesheets/views/_homepage.scss
@@ -251,10 +251,10 @@ body.homepage {
         top: 0;
         right: 0;
         height: 100%;
-        min-width: 250px;
+        min-width: 210px;
         background-image: asset-url('chevron-extend.svg');
         background-position: right center;
-        background-size: contain;
+        background-size: auto 100%;
       }
     }
   }
